Refactor(crystals): Remove target and time

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -327,9 +327,8 @@
       "TYPE": "Famille",
       "TYPEFULL": "Famille de magie",
       "COST": "Coût",
-      "LEVEL": "Niveau",
-      "TARGET": "Portée",
-      "TIME": "Durée",
+      "LEVEL": "Maîtrise",
+      "CAPACITY": "Capacité",
       "ARMOR": "Armure",
       "WEAPON": "Arme (optionnel)",
       "ATTACKBONUS": "Bonus d'Attaque",
